// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imperative-test-cli config list should list the configuration 1`] = `
"profiles: 
  secured: 
    type:       secured
    properties: 
      info: 
    secure: 
      - secret
  base: 
    type:       base
    properties: 
    secure: 
      (empty array)
defaults: 
  secured: secured
  base:    base
"
`;

exports[`imperative-test-cli config list should list the configuration without showing secure values 1`] = `
"profiles: 
  secured: 
    type:       secured
    properties: 
      info:   
      secret: (secure value)
    secure: 
      - secret
  base: 
    type:       base
    properties: 
    secure: 
      (empty array)
defaults: 
  secured: secured
  base:    base
"
`;

exports[`imperative-test-cli config list should list the defaults configuration property 1`] = `
"secured: secured
base:    base
"
`;

exports[`imperative-test-cli config list should list the profiles configuration property 1`] = `
"secured: 
  type:       secured
  properties: 
    info: 
  secure: 
    - secret
base: 
  type:       base
  properties: 
  secure: 
    (empty array)
"
`;

exports[`imperative-test-cli config list should list the root level property names only 1`] = `
"profiles
defaults
"
`;
